Corrección de errores, limpieza de ontologías y cambio a rutas relativas

--- a/RECLAMO/lib/evaluationSystemExecutor.conf
+++ b/RECLAMO/lib/evaluationSystemExecutor.conf
@@ -1,8 +1,13 @@
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
+# Parametros de configuracion para el sistema de evaluación
 
+# MODIFICAR
+
+ontologies.uri=file:///root/RECLAMO
 system.evaluation.threshold.level.success=0.01
-ontairs.airs.ontology.uri=file:///root/RECLAMO/ontologies/RECAIRS.owl
+
+# NO MODIFICAR
+
+ontairs.airs.ontology.uri=/ontologies/RECAIRS.owl
 ontairs.airs.ontology.namespace=http://www.dit.upm.es/~reclamo/ontologies/RECAIRS.owl#
-ontairs.airs.ontology.file=/root/RECLAMO/ontologies/RECAIRS.owl
-red.neuronal.file=/root/RECLAMO/red.conf
+ontairs.airs.ontology.file=../ontologies/RECAIRS.owl
+red.neuronal.file=../red.conf
