--- a/RECLAMO/lib/parser.conf
+++ b/RECLAMO/lib/parser.conf
@@ -1,12 +1,17 @@
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
+# Parametros de configuracion para el parser
 
-resources.relevance.file=resources/relevanceSource
-ids.reliability.file=resources/idsReliability
-snort.intrusion.file=resources/snortParser
-idmef.intrusion.file=resources/idmefParser
+# MODIFICAR
+
 airs.database.name=ontairs
 mysql.connection.username=root
 mysql.connection.password=mysqlpass
 mysql.server.name=localhost
 network.assets.table.name=assets
+
+# NO MODIFICAR
+
+resources.relevance.file=resources/relevanceSource
+ids.reliability.file=resources/idsReliability
+snort.intrusion.file=resources/snortParser
+idmef.intrusion.file=resources/idmefParser
+
