--- a/RECLAMO/lib/systemContextAnomalyDetector.conf
+++ b/RECLAMO/lib/systemContextAnomalyDetector.conf
@@ -1,11 +1,14 @@
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
+# Parametros de configuracion para el modulo de contexto de sistema
 
-system.context.checker.script.path=/root/RECLAMO/running_files/chequeo2.sh
-nagios.service-perfdata.path=/tmp/service-perfdata
-nagios.host-perfdata.path=/tmp/host-perfdata
+# MODIFICAR
 airs.database.name=ontairs
 mysql.connection.username=root
 mysql.connection.password=mysqlpass
 mysql.server.name=localhost
 system.context.profile.table.name=SystemContextProfile
+
+# NO MODIFICAR
+
+system.context.checker.script.path=../running_files/chequeo2.sh
+nagios.service-perfdata.path=/tmp/service-perfdata
+nagios.host-perfdata.path=/tmp/host-perfdata
