--- a/RECLAMO/lib/networkContextAnomalyDetector.conf
+++ b/RECLAMO/lib/networkContextAnomalyDetector.conf
@@ -1,10 +1,16 @@
-# Parametros de configuracion para el modulo de contexto de red en su fase de aprendizaje
-network.context.sancp.sensor.path=/root/RECLAMO/sensor
-network.context.sancp.config-file=/etc/sancp/sancp.conf
-network.context.sancp.log-file=/var/log/sancp/sancp.log
+# Parametros de configuracion para el modulo de contexto de red
+
+# MODIFICAR
+
 airs.database.name=ontairs
 mysql.connection.username=root
 mysql.connection.password=mysqlpass
 mysql.server.name=localhost
 network.context.profile.table.name=NetworkContextProfile
 network.assets.table.name=assets
+
+# NO MODIFICAR
+
+network.context.sancp.sensor.path=../sensor
+network.context.sancp.config-file=/etc/sancp/sancp.conf
+network.context.sancp.log-file=/var/log/sancp/sancp.log
