Corrección de errores

--- a/RECLAMO/lib/evaluationSystemExecutor.conf
+++ b/RECLAMO/lib/evaluationSystemExecutor.conf
@@ -2,12 +2,12 @@
 
 # MODIFICAR
 
-ontologies.uri=file:///root/RECLAMO
+ontologies.uri=file:///home/saturno
 system.evaluation.threshold.level.success=0.01
 
 # NO MODIFICAR
 
-ontairs.airs.ontology.uri=/ontologies/RECAIRS.owl
+ontairs.airs.ontology.uri=/RECLAMO/ontologies/RECAIRS.owl
 ontairs.airs.ontology.namespace=http://www.dit.upm.es/~reclamo/ontologies/RECAIRS.owl#
 ontairs.airs.ontology.file=../ontologies/RECAIRS.owl
 red.neuronal.file=../red.conf
