--- a/RECLAMO/lib/parser.conf
+++ b/RECLAMO/lib/parser.conf
@@ -10,8 +10,8 @@ network.assets.table.name=assets
 
 # NO MODIFICAR
 
-resources.relevance.file=resources/relevanceSource
-ids.reliability.file=resources/idsReliability
-snort.intrusion.file=resources/snortParser
-idmef.intrusion.file=resources/idmefParser
+resources.relevance.file=relevanceSource
+ids.reliability.file=idsReliability
+snort.intrusion.file=snortParser
+idmef.intrusion.file=idmefParser
 
