Solución de errores y generación de ejecutable

--- a/RECLAMO/config_files/evaluationSystemExecutor.conf
+++ b/RECLAMO/config_files/evaluationSystemExecutor.conf
@@ -10,4 +10,4 @@ system.evaluation.threshold.level.success=0.01
 ontairs.airs.ontology.uri=/RECLAMO/ontologies/RECAIRS.owl
 ontairs.airs.ontology.namespace=http://www.dit.upm.es/~reclamo/ontologies/RECAIRS.owl#
 ontairs.airs.ontology.file=../ontologies/RECAIRS.owl
-red.neuronal.file=../red.conf
+red.neuronal.file=../RECLAMO/config_files/red.conf
