--- a/RECLAMO/config_files/ontairs.conf
+++ b/RECLAMO/config_files/ontairs.conf
@@ -4,6 +4,8 @@
 
 ontologies.uri=file:///home/saturno/RECLAMO
 alert.threshold=1
+success.threshold=50.0
+discard.threshold=30
 airs.database.name=ontairs
 mysql.connection.username=root
 mysql.connection.password=mysqlpass
