--- a/libraries/EvaluationSystemTrainer/evaluationSystemTrainer.conf
+++ b/libraries/EvaluationSystemTrainer/evaluationSystemTrainer.conf
@@ -5,5 +5,5 @@ mysql.connection.username=root
 mysql.connection.password=mysqlpass
 mysql.server.name=localhost
 network.assets.table.name=assets
-red.neuronal.file=../training.conf
+red.neuronal.file=../RECLAMO/config_files/training.conf
 idmef.alerts.path=/var/log/prelude-xml.log
