--- a/RECLAMO/config_files/networkContextAnomalyDetector.conf
+++ b/RECLAMO/config_files/networkContextAnomalyDetector.conf
@@ -8,9 +8,9 @@ mysql.connection.password=mysqlpass
 mysql.server.name=localhost
 network.context.profile.table.name=NetworkContextProfile
 network.assets.table.name=assets
+network.context.sancp.sensor.path=/home/saturno/RECLAMO/sensor
 
 # NO MODIFICAR
 
-network.context.sancp.sensor.path=../sensor
 network.context.sancp.config-file=/etc/sancp/sancp.conf
 network.context.sancp.log-file=/var/log/sancp/sancp.log
