--- a/RECLAMO/nbproject/project.properties
+++ b/RECLAMO/nbproject/project.properties
@@ -16,7 +16,9 @@ file.reference.SystemContextModeSelector.jar=lib/SystemContextModeSelector.jar
 file.reference.pop3.jar=lib/pop3.jar
 file.reference.jena.jar=lib/jena.jar
 file.reference.EvaluationSystemExecutor.jar=lib/EvaluationSystemExecutor.jar
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 file.reference.pellet-rules.jar=lib/pellet-rules.jar
 file.reference.RECParser.jar=lib/RECParser.jar
 debug.test.classpath=${run.test.classpath}
@@ -43,7 +45,7 @@ file.reference.mail.jar=lib/mail.jar
 file.reference.pellet-owlapi.jar=lib/pellet-owlapi.jar
 file.reference.concurrent.jar=lib/concurrent.jar
 mkdist.disabled=false
-jar.compress=false
+jar.compress=true
 file.reference.pellet-owlapiv3.jar=lib/pellet-owlapiv3.jar
 annotation.processing.processors.list=
 javac.external.vm=false
@@ -68,7 +70,9 @@ file.reference.stax-api-1.0.jar=lib/stax-api-1.0.jar
 file.reference.wstx-asl-3.0.0.jar=lib/wstx-asl-3.0.0.jar
 file.reference.iri.jar=lib/iri.jar
 file.reference.arq.jar=lib/arq.jar
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.notree=false
 dist.jar=${dist.dir}/RECLAMO.jar
@@ -89,7 +93,86 @@ file.reference.activation.jar=lib/activation.jar
 javadoc.additionalparam=
 file.reference.EvaluationSystemModeSelector.jar=lib/EvaluationSystemModeSelector.jar
 file.reference.pellet-datatypes.jar=lib/pellet-datatypes.jar
-javac.classpath=${file.reference.ControlPoint-0.0.jar}\:${file.reference.activation.jar}\:${file.reference.antlr-2.7.5.jar}\:${file.reference.antlr-r13.jar}\:${file.reference.arq-2.8.8.jar}\:${file.reference.arq-extra.jar}\:${file.reference.arq.jar}\:${file.reference.aterm-java-1.6.jar}\:${file.reference.commons-lang-2.0.jar}\:${file.reference.commons-logging-1.1.jar}\:${file.reference.commons-logging.jar}\:${file.reference.concurrent.jar}\:${file.reference.dsn.jar}\:${file.reference.edtftpj-1.5.2.jar}\:${file.reference.ekitspell.jar}\:${file.reference.icu4j-3_6.jar}\:${file.reference.icu4j_3_4.jar}\:${file.reference.imap.jar}\:${file.reference.iri.jar}\:${file.reference.jcalendar.jar}\:${file.reference.jena-2.6.3.jar}\:${file.reference.jena-2.6.4-tests.jar}\:${file.reference.jena-2.6.4.jar}\:${file.reference.jena.jar}\:${file.reference.jenatest.jar}\:${file.reference.jess.jar}\:${file.reference.jgrapht-jdk1.5.jar}\:${file.reference.json.jar}\:${file.reference.junit.jar}\:${file.reference.kazuki.jar}\:${file.reference.log4j-1.2.12.jar}\:${file.reference.log4j-1.2.13.jar}\:${file.reference.looks-2.2.2.jar}\:${file.reference.lucene-core-2.0.0.jar}\:${file.reference.mail.jar}\:${file.reference.mailapi.jar}\:${file.reference.model-13.jar}\:${file.reference.mysql-connector-java-5.1.7-bin.jar}\:${file.reference.owlsyntax.jar}\:${file.reference.pellet-cli.jar}\:${file.reference.pellet-core.jar}\:${file.reference.pellet-datatypes.jar}\:${file.reference.pellet-dig.jar}\:${file.reference.pellet-el.jar}\:${file.reference.pellet-explanation.jar}\:${file.reference.pellet-jena.jar}\:${file.reference.pellet-modularity.jar}\:${file.reference.pellet-owlapi.jar}\:${file.reference.pellet-owlapiv3.jar}\:${file.reference.pellet-pellint.jar}\:${file.reference.pellet-query.jar}\:${file.reference.pellet-rules.jar}\:${file.reference.pellet-test.jar}\:${file.reference.pop3.jar}\:${file.reference.protege-owl.jar}\:${file.reference.protege.jar}\:${file.reference.relaxngDatatype.jar}\:${file.reference.rio-13.jar}\:${file.reference.slf4j-api-1.5.8.jar}\:${file.reference.slf4j-log4j12-1.5.8.jar}\:${file.reference.smtp.jar}\:${file.reference.stax-api-1.0.jar}\:${file.reference.swrl-jess-bridge.jar}\:${file.reference.util-13.jar}\:${file.reference.wstx-asl-3.0.0.jar}\:${file.reference.xercesImpl-2.7.1.jar}\:${file.reference.xercesImpl.jar}\:${file.reference.xml-apis.jar}\:${file.reference.AIRS_Responses_Executor.jar}\:${file.reference.ContextEntropyVariance.jar}\:${file.reference.EvaluationSystemExecutor.jar}\:${file.reference.EvaluationSystemModeSelector.jar}\:${file.reference.NetworkContextAnomalyDetector.jar}\:${file.reference.NetworkContextModeSelector.jar}\:${file.reference.SystemContextAnomalyDetector.jar}\:${file.reference.RECParser.jar}\:${file.reference.SystemContextModeSelector.jar}\:${file.reference.Backpropagation.jar}\:${file.reference.jdom-2.0.5.jar}
+javac.classpath=\
+    ${file.reference.ControlPoint-0.0.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.antlr-2.7.5.jar}:\
+    ${file.reference.antlr-r13.jar}:\
+    ${file.reference.arq-2.8.8.jar}:\
+    ${file.reference.arq-extra.jar}:\
+    ${file.reference.arq.jar}:\
+    ${file.reference.aterm-java-1.6.jar}:\
+    ${file.reference.commons-lang-2.0.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.commons-logging.jar}:\
+    ${file.reference.concurrent.jar}:\
+    ${file.reference.dsn.jar}:\
+    ${file.reference.edtftpj-1.5.2.jar}:\
+    ${file.reference.ekitspell.jar}:\
+    ${file.reference.icu4j-3_6.jar}:\
+    ${file.reference.icu4j_3_4.jar}:\
+    ${file.reference.imap.jar}:\
+    ${file.reference.iri.jar}:\
+    ${file.reference.jcalendar.jar}:\
+    ${file.reference.jena-2.6.3.jar}:\
+    ${file.reference.jena-2.6.4-tests.jar}:\
+    ${file.reference.jena-2.6.4.jar}:\
+    ${file.reference.jena.jar}:\
+    ${file.reference.jenatest.jar}:\
+    ${file.reference.jess.jar}:\
+    ${file.reference.jgrapht-jdk1.5.jar}:\
+    ${file.reference.json.jar}:\
+    ${file.reference.junit.jar}:\
+    ${file.reference.kazuki.jar}:\
+    ${file.reference.log4j-1.2.12.jar}:\
+    ${file.reference.log4j-1.2.13.jar}:\
+    ${file.reference.looks-2.2.2.jar}:\
+    ${file.reference.lucene-core-2.0.0.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.mailapi.jar}:\
+    ${file.reference.model-13.jar}:\
+    ${file.reference.mysql-connector-java-5.1.7-bin.jar}:\
+    ${file.reference.owlsyntax.jar}:\
+    ${file.reference.pellet-cli.jar}:\
+    ${file.reference.pellet-core.jar}:\
+    ${file.reference.pellet-datatypes.jar}:\
+    ${file.reference.pellet-dig.jar}:\
+    ${file.reference.pellet-el.jar}:\
+    ${file.reference.pellet-explanation.jar}:\
+    ${file.reference.pellet-jena.jar}:\
+    ${file.reference.pellet-modularity.jar}:\
+    ${file.reference.pellet-owlapi.jar}:\
+    ${file.reference.pellet-owlapiv3.jar}:\
+    ${file.reference.pellet-pellint.jar}:\
+    ${file.reference.pellet-query.jar}:\
+    ${file.reference.pellet-rules.jar}:\
+    ${file.reference.pellet-test.jar}:\
+    ${file.reference.pop3.jar}:\
+    ${file.reference.protege-owl.jar}:\
+    ${file.reference.protege.jar}:\
+    ${file.reference.relaxngDatatype.jar}:\
+    ${file.reference.rio-13.jar}:\
+    ${file.reference.slf4j-api-1.5.8.jar}:\
+    ${file.reference.slf4j-log4j12-1.5.8.jar}:\
+    ${file.reference.smtp.jar}:\
+    ${file.reference.stax-api-1.0.jar}:\
+    ${file.reference.swrl-jess-bridge.jar}:\
+    ${file.reference.util-13.jar}:\
+    ${file.reference.wstx-asl-3.0.0.jar}:\
+    ${file.reference.xercesImpl-2.7.1.jar}:\
+    ${file.reference.xercesImpl.jar}:\
+    ${file.reference.xml-apis.jar}:\
+    ${file.reference.AIRS_Responses_Executor.jar}:\
+    ${file.reference.ContextEntropyVariance.jar}:\
+    ${file.reference.EvaluationSystemExecutor.jar}:\
+    ${file.reference.EvaluationSystemModeSelector.jar}:\
+    ${file.reference.NetworkContextAnomalyDetector.jar}:\
+    ${file.reference.NetworkContextModeSelector.jar}:\
+    ${file.reference.SystemContextAnomalyDetector.jar}:\
+    ${file.reference.SystemContextModeSelector.jar}:\
+    ${file.reference.Backpropagation.jar}:\
+    ${file.reference.RECParser.jar}:\
+    ${file.reference.jdom-2.0.5.jar}
 javadoc.noindex=false
 file.reference.rio-13.jar=lib/rio-13.jar
 file.reference.lucene-core-2.0.0.jar=lib/lucene-core-2.0.0.jar
@@ -114,7 +197,8 @@ file.reference.slf4j-api-1.5.8.jar=lib/slf4j-api-1.5.8.jar
 file.reference.jenatest.jar=lib/jenatest.jar
 file.reference.swrl-jess-bridge.jar=lib/swrl-jess-bridge.jar
 file.reference.pellet-test.jar=lib/pellet-test.jar
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
 file.reference.SystemContextAnomalyDetector.jar=lib/SystemContextAnomalyDetector.jar
 file.reference.mysql-connector-java-5.1.7-bin.jar=lib/mysql-connector-java-5.1.7-bin.jar
@@ -126,7 +210,11 @@ file.reference.jena-2.6.4.jar=lib/jena-2.6.4.jar
 file.reference.commons-lang-2.0.jar=lib/commons-lang-2.0.jar
 javadoc.nonavbar=false
 javadoc.windowtitle=
-javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 file.reference.smtp.jar=lib/smtp.jar
 file.reference.pellet-jena.jar=lib/pellet-jena.jar
 file.reference.edtftpj-1.5.2.jar=lib/edtftpj-1.5.2.jar
