Solución de errores en configuración de agente ejecutor

--- a/libraries/AIRSResponseExecutorTester/lib/airsResponseExecutor.conf
+++ b/libraries/AIRSResponseExecutorTester/lib/airsResponseExecutor.conf
@@ -1,7 +1,10 @@
 #################################################################################################################
 # CONFIGURATION FILE
+#
+#
 # 2012 Danny Guamán <ds.guaman@alumnos.upm.es>
 # Universidad Politécnica de Madrid
+#
 #################################################################################################################
 # 
 # logfile: <filename>
@@ -44,18 +47,6 @@ loglevel: 2
 #
 executor_agent: R-FW, 127.0.0.1:34000, m1p455w0rd
 executor_agent: local-agent, 127.0.0.1:34000, m1p455w0rd
-executor_agent: INT3-1, 10.0.3.131, m1p455w0rd
-executor_agent: INT3-2, 10.0.3.132, m1p455w0rd
-executor_agent: HN-Server, 127.0.0.1:34001, m1p455w0rd
-executor_agent: INT2-1, 10.0.2.100, m1p455w0rd
-executor_agent: INT2-2, 10.0.2.101, m1p455w0rd
-executor_agent: INT2-3, 10.0.2.102, m1p455w0rd
-executor_agent: INT2-4, 10.0.2.103, m1p455w0rd
-executor_agent: INT2-5, 10.0.2.104, m1p455w0rd
-executor_agent: INT2-6, 10.0.2.105, m1p455w0rd
-
-executor_agent:DMZ-2, 192.168.100.130:34000, m1p455w0rd
-
 #
 #
 #
@@ -71,10 +62,6 @@ executor_agent:DMZ-2, 192.168.100.130:34000, m1p455w0rd
 #
 group: PerimetralFirewallGroup > R-FW
 group: LocalAgentGroup > local-agent
-group: IntranetCriticalHostGroup > INT3-1, INT3-2
-group: HoneyNetServerGroup > HN-Server
-group: DMZServer > DMZ-2
-group: INTNet-2 > INT2-2
 #
 # 
 #
@@ -104,14 +91,14 @@ response_action: blockInAttack, PerimetralFirewallGroup, ipt-block, src, execute
 response_action: blockOutAttack, PerimetralFirewallGroup, ipt-block, src, execute, 60, out, ALL
 response_action: blockInOutAttack, PerimetralFirewallGroup, ipt-block, src, execute, 60, both, ALL
 response_action: blockThisAttack, PerimetralFirewallGroup, ipt-block, src, execute, 60, this, ALL
-response_action: mailNotification, LocalAgentGroup, email, src, execute, 0, in,ALL
-response_action: addACL, LocalAgentGroup, ciscoacl, src, execute, 2min ,in, ALL
-response_action: denyConnectionHost, IntranetCriticalHostGroup, host-deny, src, execute, 1hour, in, ALL
-response_action: disableLinuxUser, THIS, disable-user, dst, execute, 1hour, 0, BackdoorGroup
+response_action: mailNotification, LocalAgentGroup, email, src, execute, 0, in, ALL
+#response_action: addACL, LocalAgentGroup, ciscoacl, src, execute, 60 ,in, ALL
+response_action: denyConnectionHost, PerimetralFirewallGroup, host-deny, src, execute, 60, in, ALL
+#response_action: disableLinuxUser, THIS, disable-user, dst, execute, 60, 0, ALL
 response_action: redirectTraffic, PerimetralFirewallGroup, ipt-redirect, src, execute, 60, in, DoSGroup
-response_action: honeynetDeployment, HoneyNetServerGroup, hnvnx, src, execute, 2hours, in, DoSGroup
-response_action: restoreIndex, DMZServer, download-backup-ftp, src, execute, 0, in, ALL
-response_action: blockInINTNet2, INTNet-2, ipt-block, src, execute, 2hours, in, ALL
+response_action: honeynetDeployment, PerimetralFirewallGroup, hnvnx, src, execute, 60, in, DoSGroup
+#response_action: restoreIndex, PerimetralFirewallGroup, download-backup-ftp, src, execute, 0, in, ALL
+response_action: blockInINTNet2, PerimetralFirewallGroup, ipt-block, src, execute, 60, in, ALL
 #
 #
 #
