--- a/vnx_scenarios/conf/R2/R2.conf
+++ b/vnx_scenarios/conf/R2/R2.conf
@@ -12,8 +12,8 @@ interface Ethernet0/2
 interface Ethernet0/3
  description "PPP"
 !
+conf t
 line vty 0 4
- exec-timeout 0 0
  password xxxx
  login
 !
