Añadido script para generar fichero de hosts de Nagios a partir de los activos en la DB

--- a/ext_config_files/agent.conf
+++ b/ext_config_files/agent.conf
@@ -61,11 +61,7 @@ accept 127.0.0.1, m1p455w0rd
 # 
 #   Only one host/network per line can be specified, but you can list unlimited
 #   lines
-# 
-dontexecute 192.168.100.130
-dontexecute 192.168.100.140
-dontexecute 10.0.3.131
-dontexecute 10.0.3.132
+#
 # 
 # 
 # onlyexecute <host>/<mask>
@@ -401,7 +397,8 @@ loglevel 3
 # 
 #   Examples:  hnvnx /usr/share/vnx/examples/honeynet.xml 
 #              hnvnx /usr/share/vnx/examples/honeynet.xml vnxUser
-hnvnx /usr/share/vnx/examples/honeynet1.xml root
+#
+hnvnx /home/saturno/RECLAMO/vnx_scenarios/attacker-kali.xml root
 # ipt-block <adapter> <logoption>
 # 
 #   This plugin will call the iptables executable in order to block the host by
@@ -424,9 +421,8 @@ ipt-block NetATT
 #   a custom port in case you run SMTP on a different port. (Default is 25)
 # 
 #   Example:   email mailserver.mydom.com root@mydom.com
-#              email 127.0.0.1 admin@mydom.com SnortSam@mydom.com
-#email 192.168.1.8:25 danny.guamanl@gmail.com admin@alumnos.upm.es
-email 192.168.100.130:25 miguel.rod.lav@gmail.com admin@alumnos.upm.es
+#              email 127.0.0.1 admin@mydom.com SnortSam@mydom.coms
+email 192.168.100.130:25 reclamoairsupm@gmail.com admin@alumnos.upm.es
 # 			  
 # 
 # 
@@ -438,7 +434,7 @@ email 192.168.100.130:25 miguel.rod.lav@gmail.com admin@alumnos.upm.es
 #   "email-blocks-only" does not (see also "avoidstatefile").
 #
 #   Example:   email-execution-only mailserver.mydom.com root@mydom.com
-email-execution-only 192.168.100.130:25 miguel.rod.lav@gmail.com admin@alumnos.upm.es
+email-execution-only 192.168.100.130:25 reclamoairsupm@gmail.com admin@alumnos.upm.es
 #
 #
 # 
@@ -459,7 +455,7 @@ email-execution-only 192.168.100.130:25 miguel.rod.lav@gmail.com admin@alumnos.u
 # 
 #   Example:   ciscoacl 1.2.3.4 telnetpw enablepw initial-acl.conf|10.1.110.5 : fastEthernet0/1 in AIRS-ACL
 #
-ciscoacl 10.0.2.1 cisco class | 10.0.13.1 : Ethernet0/1 in AIRS-ACL
+ciscoacl 10.0.13.2 xxxx xxxx | 10.0.0.1 : Ethernet0/0 in INTNet1
 #
 #
 #
@@ -505,7 +501,6 @@ host-deny /etc
 # whitelist <agent.conf directory>
 #
 #  THis plugin adds a new IP to whitelist in agent.conf file.
-whitelist /home/danny/Documents/agent-ex.conf
 #
 #
 #
@@ -515,25 +510,21 @@ whitelist /home/danny/Documents/agent-ex.conf
 #
 #
 #
-close-port-linux
 #
 #
 # Close-connection linux
 # Close all connections realated with an attacker
 #
-close-connection-linux
 #
 # upload-backup-ftp <ftp server> <user> <password> <source_file> <destination_directory>
 #
 #   This plugin upload <soucefile> to <destination_directory> in a FTP Server
 #
-upload-backup-ftp localhost santiago santiago8 /var/www/index.html ./
 # 
 # download-backup-ftp <ftp server> <user> <password> <source_file> <destination_directory>
 #
 #   This plugin download <source-file> from FTP server to <destination_directory> 
 #
-download-backup-ftp localhost santiago santiago8 ./index.html /var/www/
 #
 #
 #  disable-user 
@@ -541,4 +532,3 @@ download-backup-ftp localhost santiago santiago8 ./index.html /var/www/
 #  This plugin disable an user account sent as parameter
 # 
 #  Example: disable-user
-disable-user 
